// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: dataPrivacy submitOptOutRequest should make the appropriate request 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "include_subaccounts": false,
      "recipients": Array [
        "fakeAddress@email.com",
      ],
    },
    "headers": Object {
      "x-msys-subaccount": 100,
    },
    "include_subaccounts": true,
    "method": "POST",
    "url": "/v1/data-privacy/opt-out-request",
  },
  "type": "POST_OPTOUT_REQUEST",
}
`;

exports[`Action Creator: dataPrivacy submitRTBFRequest should make the appropriate request 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "include_subaccounts": false,
      "recipients": Array [
        "fakeAddress@email.com",
      ],
    },
    "headers": Object {
      "x-msys-subaccount": 100,
    },
    "include_subaccounts": true,
    "method": "POST",
    "url": "/v1/data-privacy/rtbf-request",
  },
  "type": "POST_RTBF_REQUEST",
}
`;
